전체 서버 유저 수 그래프에 모든 국가 데이터 표시 설정 추가

--- a/message.properties
+++ b/message.properties
@@ -65,6 +65,7 @@ cookie.notice.link-text=Learn more
 all-stats.users.title=Total number of server users
 all-stats.users.select-compare-country.name=Select Country
 all-stats.users.select-compare-country.reset-btn=Reset country selection
+all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=All countries
 all-stats.users.empty-country-data=No data exists for the country "{countryName}".
 all-server-map.title=Map of all servers
