전체 통계에 모드 로더 통계 추가

--- a/message.properties
+++ b/message.properties
@@ -68,5 +68,7 @@ all-stats.users.select-compare-country.reset-btn=Reset country selection
 all-stats.users.show-all.name=Display all country data
 all-stats.users.graph.all-country=All countries
 all-stats.users.empty-country-data=No data exists for the country "{countryName}".
+all-stats.mod-loader.title=Mod loader statistics
+all-stats.mod-loader.tooltip=Mod Loader
 all-server-map.title=Map of all servers
 all-server-map.server-info-btn=Click to check server info
