--- a/.github/workflows/pr_check_encoding.yml
+++ b/.github/workflows/pr_check_encoding.yml
@@ -4,21 +4,11 @@ on: [ push, pull_request ]
 
 jobs:
   file-encoding:
-    name: file encooding check
     runs-on: ubuntu-latest
 
     steps:
-      - name: run the checkout action
+      - name: "[Git] Checkout repository"
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: list all changed files
-        run: |
-          files=$(git diff --name-only origin/$GITHUB_BASE_REF...${{ github.sha }})
-          IFS=$'\n'; files=($files); unset IFS;  # split the string into an array
-          file --mime "${files[@]}"
-      - name: list all changed files with the wrong encoding
-        run: |
-          files=$(git diff --name-only origin/$GITHUB_BASE_REF...${{ github.sha }})
-          IFS=$'\n'; files=($files); unset IFS;  # split the string into an array
-          ! file --mime "${files[@]}" | grep -v "charset=utf-8\|charset=us-ascii\|charset=binary\| (No such file or directory)$"
+
+      - name: "[-] Check Encoding is UTF8-NO-BOM"
+        run: echo '! find $GITHUB_WORKSPACE -type f -exec file --mime {} \; | grep -v "charset=binary$" | grep -v "charset=us-ascii$"' | bash
