--- a/.github/workflows/pr_check_encoding.yml
+++ b/.github/workflows/pr_check_encoding.yml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "[-] Check Encoding is UTF8-NO-BOM"
-        run: echo '! find $GITHUB_WORKSPACE -type f -exec file --mime {} \; | grep -v "charset=binary$" | grep -v "charset=us-ascii$"' | bash
+        run: echo '! find $GITHUB_WORKSPACE -type f -exec file --mime {} \; | grep -v "charset=utf-8$" | grep -v "charset=us-ascii$"' | bash
